--- a/index.html
+++ b/index.html
@@ -208,12 +208,17 @@
 
         // --- FIREBASE INITIALIZATION ---
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'gym-tracker-default';
-        let firebaseConfig;
-        try {
-            firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : null;
-        } catch(e) {
-            console.error("Failed to parse firebase config:", e);
-        }
+        // Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyBQ4bEdUdAzQAi3mWmFm5eUeexAS-VZYxDM",
+  authDomain: "repify12.firebaseapp.com",
+  projectId: "repify12",
+  storageBucket: "repify12.firebasestorage.app",
+  messagingSenderId: "889020534394",
+  appId: "1:889020534394:web:9a0f1d936b64082802b5c3",
+  measurementId: "G-7CQRCXV89E"
+};
 
         async function initializeFirebase() {
             if (!firebaseConfig) {
